--- a/public/.htaccess
+++ b/public/.htaccess
@@ -11,6 +11,8 @@ Options -Indexes
 	Options +FollowSymlinks
 	RewriteEngine On
 
+	RewriteCond %{REQUEST_URI} ^/uploads/
+	RewriteRule ^uploads/(.*)$ uploads/$1 [L]
 	# If you installed CodeIgniter in a subfolder, you will need to
 	# change the following line to match the subfolder you need.
 	# http://httpd.apache.org/docs/current/mod/mod_rewrite.html#rewritebase
@@ -31,6 +33,7 @@ Options -Indexes
 	# request to the front controller, index.php
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
+	RewriteCond %{REQUEST_URI} !^/uploads/
 	RewriteRule ^([\s\S]*)$ index.php/$1 [L,NC,QSA]
 
 	# Ensure Authorization header is passed along
